# flow_chat

./: README.md  start_arm.sh  start_x86.sh
src/app_msgs/: CMakeLists.txt  package.xml
src/app_msgs/action/: AutomaticScraping.action  ExploreBuild.action  GoCharge.action  GoTarget.action  SemanticNavigation.action
src/app_msgs/msg/: AudioPlay.msg  ForbiddenZone.msg  MapInfo.msg  MapMask.msg  MapOption.msg  MappingOption.msg  MappingStatus.msg  ModifiedMap.msg  MotionType.msg  NavigationOption.msg  ObjectBox.msg  ObjectSemantic.msg  PncMessage.msg  RoomSemantic.msg  SearchSomething.msg  Semantic.msg  TaskMessage.msg  VirtualWall.msg  VirtualWalls.msg
src/app_msgs/srv/: ArmLift.srv  ArmRotate.srv  CloudCommand.srv  ExploreBuild.srv  GoCharge.srv  GoTarget.srv  RightArmDetect.srv  SaveImages.srv  SearchSomething.srv  SemanticMap.srv  SlamCommand.srv  StorageItem.srv
src/arm_interfaces/: CMakeLists.txt
src/arm_interfaces/action/: ArmTask.action
src/arm_interfaces/msg/: ArmStatus.msg  AutonomyArmCommand.msg  JointStatus.msg  MasterArmCommand.msg  PerceptionInformation.msg  StatusStream.msg
src/arm_interfaces/srv/: EnableArmMode.srv  NeckTask.srv  SetModeParam.srv  TrajFollowMode.srv
src/chat_robot_cpp/: CMakeLists.txt  package.xml
src/chat_robot_cpp/data/: semantic_dictionary.txt  semantic_map.data
src/chat_robot_cpp/include/chat_robot_cpp/: chat_node.h
src/chat_robot_cpp/msg/: PcmAudio.msg
src/chat_robot_cpp/prompt/: foreign_teachers.txt  role_prompt.txt  role_prompt_bak.txt
src/chat_robot_cpp/src/: chat_node.cpp
src/communication_msgs/: CMakeLists.txt  package.xml
src/communication_msgs/msg/: Communication.msg  Header.msg
src/dual_arm_interfaces/: CMakeLists.txt  package.xml
src/dual_arm_interfaces/msg/: AutonomyJointCommand.msg  DualArmImatationStatus.msg  DualArmStatus.msg  GripperCommand.msg  ImatationJointCommand.msg  Joint.msg  NeckCommand.msg  PerceptionInformation.msg  PerceptionTarget.msg  TeleoperationCartesianCommand.msg  TeleoperationJointCommand.msg  ThreeFingerGripper.msg  TwoFingerGripper.msg
src/dual_arm_interfaces/srv/: CollisionChecking.srv  Drag.srv  JointAdmittance.srv  LiftController.srv  OpenCloseJoint.srv  Restart32.srv  SetGripperForce.srv  SetJointAdmitance.srv  SwitchJointMode.srv  TrajectoryFollowing.srv
src/iflytek_msg/: CMakeLists.txt  package.xml
src/iflytek_msg/msg/: PcmMsg.msg  PcmMsgAngle.msg
src/iflytek_msg/srv/: RemoteTask.srv
src/serial_interfaces/: CMakeLists.txt  package.xml
src/serial_interfaces/msg/: BodyPositionMove.msg  ChargeInplace.msg  ChassisAutoMove.msg  ChassisFeedback.msg  DataCollection.msg  DriverStatus.msg  DualArmAutoMove.msg  DualArmStatus.msg  GimbleControl.msg  GimbleFeedback.msg  GimbleSetSpeed.msg  GripperAutoMove.msg  InfradeGuid.msg  Joint.msg  LiftMoveCtrl.msg  RemoteControl.msg  RoboticArm.msg  RollingMoveCtrl.msg  TwoFingerGripper.msg
src/serial_interfaces/srv/: ChargeControl.srv  ClearMotorError.srv  EmergStop.srv  GetRgbMode.srv  OpenCloseJoint.srv  PowerControl.srv  Restart32.srv  SetMotorMode.srv  SetMotorPosition.srv  SetMotorZero.srv  SwitchRgbMode.srv
src/test_stream_publish/: CMakeLists.txt  package.xml
src/test_stream_publish/src/: stream_subscriber_demo.cpp
